fix: add QueryResult to QueryService, use it directly in /dump (like legacy)